crates/nx-syntax/tests/fixtures/invalid/contenttype-after-import.nx
import "./ui"
contenttype "./schemas/html5"

<App />
